Complete controllers for links and shorten
+ Renders page
+ Routing for all pages

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,7 @@
 <div id='container' ng-controller="LinksController">
   <!-- Your html here -->
+  <title>Hello Links</title>
+  <ul>
+    <!-- <li ng-repeat="link in linksList"> {{link}} </li>  -->
+  </ul>
 </div>
